# eigentest

./: README.md  setup.py
eigentest/: __init__.py  eigentest.py
eigentest.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: CMakeLists.txt  _cfunct.cpp  cfunct.cpp  cfunct.h
